--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 
 header {
     font-family: 'Raleway', sans-serif;
-    min-height: 100vh;
+    min-height: 70vh;
 
 }
 
@@ -30,16 +30,6 @@ img.col-lg-12.rounded-circle {
    
 }
 
-header > img {
-    /*
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 4rem;
-*/
-
-
-}
 
 header h2 {
     margin-bottom: 0rem;
@@ -59,14 +49,12 @@ header h2 {
 
 .dos {
     /*    https://www.pexels.com/photo/selective-focus-photography-crystals-stones-753416/*/
-    background-image: url("../img/amethyst-black-and-white-carat-753416.jpg");
+    background-image: url("../img/Midnight%20City.jpg");
     background-blend-mode: saturation;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     min-height: 40vh;
-    border-bottom: solid grey 2rem;
-    margin-bottom: 4rem;
 }
 
 .tres {
@@ -163,7 +151,7 @@ span img {
     left: -200rem;
     right: -200rem;
     bottom: 0rem;
-    background-color: #625757;
+/*    background-color: #625757;*/
     /*    background-color: #E2F2F1;*/
 
     background: #e2e2e2;
@@ -196,8 +184,15 @@ footer {
     
 }
 footer p{
+    font-family: 'Raleway', sans-serif;
     color:#9d8f8f;
     font-size: 1.6rem;
+}
+ .solo{
+     padding-top: 2rem;
+     padding-bottom: 1rem;
+    color:#bcbab8;
+    font-size: 1.2rem;
 }
 
 thumbnails:hover {
