--- a/css/main.css
+++ b/css/main.css
@@ -19,15 +19,21 @@ img.col-12 {
     max-width: 10rem;
 }
 
+.h1-portf {
+    font-size: 3.8rem;
+    text-shadow: 2px 2px grey;
+    color: #bcbab8;
+}
+
 img.col-lg-12.rounded-circle {
-    
+
     max-width: 20rem;
-/*   border-radius: 232px;*/
-  /* 50%/50% */
-  padding: 0.5rem;
-  background-color: rgba(188,186,184,.5);
-  border: 1rem solid rgb(157,143,143, .5);
-   
+    /*   border-radius: 232px;*/
+    /* 50%/50% */
+    padding: 0.5rem;
+    background-color: rgba(188, 186, 184, .5);
+    border: 1rem solid rgb(157, 143, 143, .5);
+
 }
 
 
@@ -60,11 +66,10 @@ header h2 {
 .tres {
     /*https://www.pexels.com/photo/woman-in-white-blazer-holding-tablet-computer-789822/*/
     background-image: url("../img/businesswoman-call-career-789822.jpg");
-    background-blend-mode: saturation;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    min-height: 20rem;
+    min-height: 40vh;
 }
 
 .navbar {
@@ -80,7 +85,11 @@ header h2 {
 h1 {
     margin: 0;
 }
-
+/*
+.fti{
+    max-width: 58rem;
+}
+*/
 footer i {
     font-size: 2rem;
 }
@@ -151,7 +160,7 @@ span img {
     left: -200rem;
     right: -200rem;
     bottom: 0rem;
-/*    background-color: #625757;*/
+    /*    background-color: #625757;*/
     /*    background-color: #E2F2F1;*/
 
     background: #e2e2e2;
@@ -181,17 +190,19 @@ footer {
     background-repeat: no-repeat;
     background-position: center;
     min-height: 30vh;
-    
+
 }
-footer p{
+
+footer p {
     font-family: 'Raleway', sans-serif;
-    color:#9d8f8f;
+    color: #9d8f8f;
     font-size: 1.6rem;
 }
- .solo{
-     padding-top: 2rem;
-     padding-bottom: 1rem;
-    color:#bcbab8;
+
+.solo {
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+    color: #bcbab8;
     font-size: 1.2rem;
 }
 
@@ -202,46 +213,79 @@ thumbnails:hover {
 img.bootsrapt {
     filter: grayscale(100%);
 }
+
 .scroll-down {
-	position: absolute;
-	left: 50%;
-	bottom: 20px;
-	display: block;
-	text-align: center;
-	font-size: 20px;
-	z-index: 100;
-	text-decoration: none;
-	text-shadow: 0;
-  width: 23px;
-  height: 23px;
-  border-bottom: 2px solid black;
-  border-right: 2px solid black;
-  z-index: 9;
-  left: 50%;
-  -webkit-transform: translate(-50%, 0%) rotate(45deg);
-  -moz-transform: translate(-50%, 0%) rotate(45deg);
-  transform: translate(-50%, 0%) rotate(45deg);
-	-webkit-animation: fade_move_down 4s ease-in-out infinite;
-	-moz-animation:    fade_move_down 4s ease-in-out infinite;
-	animation:         fade_move_down 4s ease-in-out infinite;
+    position: absolute;
+    left: 50%;
+    bottom: 20px;
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    z-index: 100;
+    text-decoration: none;
+    text-shadow: 0;
+    width: 23px;
+    height: 23px;
+    border-bottom: 2px solid black;
+    border-right: 2px solid black;
+    z-index: 9;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0%) rotate(45deg);
+    -moz-transform: translate(-50%, 0%) rotate(45deg);
+    transform: translate(-50%, 0%) rotate(45deg);
+    -webkit-animation: fade_move_down 4s ease-in-out infinite;
+    -moz-animation: fade_move_down 4s ease-in-out infinite;
+    animation: fade_move_down 4s ease-in-out infinite;
 }
 
 
 /*animated scroll arrow animation*/
 @-webkit-keyframes fade_move_down {
-  0%   { -webkit-transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
-  50%  { opacity: 1;  }
-  100% { -webkit-transform:translate(0,10px) rotate(45deg); opacity: 0; }
+    0% {
+        -webkit-transform: translate(0, -10px) rotate(45deg);
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        -webkit-transform: translate(0, 10px) rotate(45deg);
+        opacity: 0;
+    }
 }
+
 @-moz-keyframes fade_move_down {
-  0%   { -moz-transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
-  50%  { opacity: 1;  }
-  100% { -moz-transform:translate(0,10px) rotate(45deg); opacity: 0; }
+    0% {
+        -moz-transform: translate(0, -10px) rotate(45deg);
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        -moz-transform: translate(0, 10px) rotate(45deg);
+        opacity: 0;
+    }
 }
+
 @keyframes fade_move_down {
-  0%   { transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
-  50%  { opacity: 1;  }
-  100% { transform:translate(0,10px) rotate(45deg); opacity: 0; }
+    0% {
+        transform: translate(0, -10px) rotate(45deg);
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        transform: translate(0, 10px) rotate(45deg);
+        opacity: 0;
+    }
 }
 
 /*
