--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@ header {
 body {
     font-family: 'Roboto Slab', serif;
     overflow-x: hidden;
+     margin: auto;
+    display:block;
     background-color: #9d8f8f;
 }
 
