Fixed background for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,12 @@ html, body {
     font-family: 'Roboto Slab', serif;
     overflow-x: hidden;
      margin: auto;
-    display:block;
+/*    display:block;*/
+/*    background-color: #9d8f8f;*/
+}
+.body2{
     background-color: #9d8f8f;
 }
-
 img.col-12 {
     max-width: 10rem;
 }
