--- a/css/main.css
+++ b/css/main.css
@@ -262,7 +262,8 @@ cursor: pointer;
 }
 .lang-img{
     max-width: 4rem;
-    min-width: 2rem;;
+    min-width: 5rem;
+    font-size: 5rem;
 }
 /*
 .scroll-down {
